# research-graph

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/ai-engineer-roadmap/: 01-foundations.md  02-core-ai-engineering.md  03-data-and-retrieval.md  04-multi-agent-and-orchestration.md  05-production-and-deployment.md  06-infrastructure.md  07-adjacent-skills.md
src/research_graph/: __init__.py  cli.py  config.py  display.py  graph.py  llm.py  state.py
src/research_graph/agents/: critic.py  planner.py  researcher.py  writer.py
src/research_graph/tools/: mcp_client.py  scraper.py  tavily_search.py
tests/: test_config.py  test_critic.py  test_display.py  test_graph.py  test_llm.py  test_mcp_client.py  test_planner.py  test_researcher.py  test_scraper.py  test_state.py  test_tavily_search.py  test_writer.py
