[project]
name = "research-graph"
version = "0.1.0"
description = "Deep Research Agent powered by LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.28,<0.4",
    "langchain-core>=0.3,<0.4",
    "langgraph>=0.6.11,<0.7",
    "langsmith>=0.3.0",
    "langchain-anthropic>=0.3.22",
    "langchain-openai>=0.3.35",
    "langchain-google-genai>=2.1",
    "langchain-tavily>=0.2.11",
    "langgraph-checkpoint-postgres>=2.0.25",
    "playwright>=1.49",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
research-graph = "research_graph.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
